<resources>
    <string name="app_name">Dicoding Stories</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="message_welcome_page">Want to learn Android, iOS, Machine Learning, Cloud, Front-End, Back-End, and other IT fields? Learn at Dicoding!</string>
    <string name="title_welcome_page">Welcome to Dicoding!</string>
    <string name="title_signup_page">Complete your data below</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Please enter your data first</string>
    <string name="title_login_page">Ready to upgrade your skills?</string>
    <string name="name">Name</string>
    <string name="message_main_page">Happy Learning at Dicoding.</string>
    <string name="logout">Logout</string>
    <string name="welcome_to_dicoding_story">Welcome to Dicoding Stories</string>
    <string name="logo_dicoding">Dicoding Logo</string>
    <string name="get_started_with_sign_up">Get Started with Sign Up!</string>
    <string name="get_start_to_login">Get Started with Login!</string>
    <string name="description">Description</string>
    <string name="list_story">Story List</string>
    <string name="detail_story_not_found">No story details found</string>
    <string name="image_story">Story Image</string>
    <string name="created_at">Created At</string>
    <string name="empty_image_warning">Please upload an image file first.</string>
    <string name="create_story">Create Story</string>
    <string name="upload">Upload</string>
    <string name="image_preview">Photo Preview</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="photo">Photo</string>
    <string name="user">User</string>
    <string name="language">Language</string>
    <string name="see_story">Lihat Cerita</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="retry">retry</string>
    <string name="normal_type">normal type</string>
    <string name="satellite_type">satellite type</string>
    <string name="terrain_type">terrain type</string>
    <string name="hybrid_type">hybrid type</string>
    <string name="use_current_location">Use current location</string>
    <string name="permission_request_granted">Permission request granted</string>
    <string name="permission_request_denied">Permission request denied</string>
    <string name="unable_to_get_location">Unable to get location</string>
    <string name="no_media_selected">No media selected</string>
    <string name="email_atau_password_tidak_valid">Email atau password tidak valid</string>
    <string name="waduw">Waduwww!</string>
    <string name="coba_lagi">Coba Lagi</string>
    <string name="lanjut">Lanjut</string>
    <string name="yeah">Yeah!</string>
    <string name="memuat">Memuat…</string>
    <string name="daftar">Daftar</string>
    <string name="email_password_invalid">Email atau password tidak valid</string>
    <string name="email_invalid_format">Email tidak valid (format: john@example.com)</string>
    <string name="password_invalid_format">Password tidak boleh kurang dari 8 karakter</string>
    <string name="maps">maps</string>
</resources>